<resources>
    <string name="app_name">Coroutines</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nombre</string>
    <string name="message_state_network">No hay conexion a internet</string>
    <string name="name_character">Name</string>
    <string name="status_character">Status</string>
    <string name="type_character">type</string>
    <string name="gender_character">Gender</string>
    <string name="create_character">Create</string>
    <string name="origin_character">Origin</string>
    <string name="location_character">Location</string>
</resources>